# pytorch-breed-classification

./: .env.example  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
app/: backbone.py  config.py  dataset.py  model.py  train.py
data/: labels.csv
notebooks/: breed_class_ViT_huggingface.ipynb
